--- a/package.json
+++ b/package.json
@@ -17,12 +17,19 @@
 		"@graphql-tools/schema": "^8.3.8",
 		"apollo-server-core": "^3.6.7",
 		"apollo-server-express": "^3.6.7",
+		"dotenv": "^16.0.0",
 		"express": "^4.17.3",
 		"graphql": "^16.3.0",
-		"mongoose": "^6.2.11"
+		"mongoose": "^6.2.11",
+		"winston": "^3.7.2"
 	},
 	"devDependencies": {
-		"dotenv": "^16.0.0",
-		"nodemon": "^2.0.15"
+		"eslint": "^8.13.0",
+		"eslint-config-airbnb-base": "^15.0.0",
+		"eslint-config-prettier": "^8.5.0",
+		"eslint-plugin-import": "^2.26.0",
+		"eslint-plugin-prettier": "^4.0.0",
+		"nodemon": "^2.0.15",
+		"prettier": "^2.6.2"
 	}
 }
