--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
 		"@graphql-tools/schema": "^8.3.8",
 		"apollo-server-core": "^3.6.7",
 		"apollo-server-express": "^3.6.7",
+		"bcryptjs": "^2.4.3",
 		"dotenv": "^16.0.0",
 		"express": "^4.17.3",
 		"graphql": "^16.3.0",
+		"jsonwebtoken": "^8.5.1",
 		"mongoose": "^6.2.11",
 		"winston": "^3.7.2"
 	},
