--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
 	"main": "index.js",
 	"scripts": {
 		"dev": "nodemon -e js,graphql src/index.js",
-		"test": "echo \"Error: no test specified\" && exit 1"
+		"test": "echo \"Error: no test specified\" && exit 1",
+		"lint": "eslint ."
 	},
 	"keywords": [],
 	"author": "",
@@ -26,6 +27,7 @@
 		"winston": "^3.7.2"
 	},
 	"devDependencies": {
+		"@graphql-eslint/eslint-plugin": "^3.10.2",
 		"eslint": "^8.13.0",
 		"eslint-config-airbnb-base": "^15.0.0",
 		"eslint-config-prettier": "^8.5.0",
