--- a/package.json
+++ b/package.json
@@ -22,12 +22,14 @@
 		"dotenv": "^16.0.0",
 		"express": "^4.17.3",
 		"graphql": "^16.3.0",
+		"graphql-config": "^4.3.0",
 		"jsonwebtoken": "^8.5.1",
 		"mongoose": "^6.2.11",
 		"uuid": "^8.3.2",
 		"winston": "^3.7.2"
 	},
 	"devDependencies": {
+		"@graphql-eslint/eslint-plugin": "^3.10.2",
 		"eslint": "^8.13.0",
 		"eslint-config-airbnb-base": "^15.0.0",
 		"eslint-config-prettier": "^8.5.0",
