--- a/.eslintrc
+++ b/.eslintrc
@@ -11,7 +11,7 @@
 	},
 	"rules": {
 		"no-unused-vars": "warn",
-		"no-underscore-dangle": ["error", { "allow": ["_id"] }]
+		"no-underscore-dangle": ["error"]
 	},
 	"overrides": [
 		{
