--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
 		"express": "^4.17.3",
 		"graphql": "^16.3.0",
 		"graphql-config": "^4.3.0",
+		"graphql-subscriptions": "^2.0.0",
 		"jsonwebtoken": "^8.5.1",
 		"mongoose": "^6.2.11",
 		"uuid": "^8.3.2",
