--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
 		"@graphql-tools/code-file-loader": "^7.2.12",
 		"@graphql-tools/graphql-file-loader": "^7.3.9",
 		"@graphql-tools/load": "^7.5.8",
-		"@graphql-tools/schema": "^8.3.8",
+		"@graphql-tools/schema": "^8.3.9",
 		"apollo-server-core": "^3.6.7",
 		"apollo-server-express": "^3.6.7",
 		"bcryptjs": "^2.4.3",
@@ -24,10 +24,12 @@
 		"graphql": "^16.3.0",
 		"graphql-config": "^4.3.0",
 		"graphql-subscriptions": "^2.0.0",
+		"graphql-ws": "^5.7.0",
 		"jsonwebtoken": "^8.5.1",
 		"mongoose": "^6.2.11",
 		"uuid": "^8.3.2",
-		"winston": "^3.7.2"
+		"winston": "^3.7.2",
+		"ws": "^8.5.0"
 	},
 	"devDependencies": {
 		"@graphql-eslint/eslint-plugin": "^3.10.2",
