--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"description": "",
 	"main": "index.js",
 	"scripts": {
-		"dev": "nodemon -e js,graphql src/index.js",
+		"start": "nodemon -e js,graphql src/index.js",
 		"test": "echo \"Error: no test specified\" && exit 1",
 		"lint": "eslint ."
 	},
